feat: 添加热加载，完善加入黑名单逻辑

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
       "run_at": "document_start"
     }
   ],
-   "action": {
+  "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "background": { "scripts": ["./hot-reload.js"] }
 }
