--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,21 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_start"
+      "js": ["./content/content.js"],
+      "type": "module"
     }
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "./popup/popup.html"
   },
-  "background": { "scripts": ["./hot-reload.js"] }
+  "background": {
+    "scripts": ["./hot-reload.js"],
+    "type": "module"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["./tools/utils.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
