--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "element-plus": "^2.11.8",
     "vue": "^3.5.21"
   },
   "devDependencies": {
@@ -22,6 +23,8 @@
     "@wxt-dev/unocss": "^1.0.1",
     "typescript": "^5.9.2",
     "unocss": "^66.5.4",
+    "unplugin-auto-import": "^20.2.0",
+    "unplugin-vue-components": "^30.0.0",
     "vue-tsc": "^3.0.6",
     "wxt": "^0.20.6"
   }
